--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sequelize": "^5.21.3",
     "sequelize-typescript": "^1.1.0",
     "sqlite3": "^4.1.1",
+    "type-graphql": "^0.17.6",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
